IMPLEMENTAÇÃO DO CRUD VEÍCULOS
-Adição das classes controllers.Veiculos e dao.DAOModelo;
-DAOVeiculo: implementação dos métodos inserir, atualizar, excluir,
todos e getPorId; Atualização do método montarVeiculo;
-Adição da página crud/veiculos.scala.html;
-index.scala.html: adição do link CRUD Veiculos;
-conf/routes: adição das URLs de CRUD Veiculos;

--- a/projetoRevendaVeiculosPlay/app/views/index.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/index.scala.html
@@ -3,6 +3,7 @@
 @main("Revenda de Veículos") {
     
     <h1>Revenda de Veículos</h1>
-    <a href="@{routes.Fabricantes.listar()}">CRUD Fabricantes</a>
+    <a href="@{routes.Fabricantes.listar()}">CRUD Fabricantes</a><br>
+    <a href="@{routes.Veiculos.listar()}">CRUD Veiculos</a>
     
 }
