-Adição das classes controller.Compras, dao.DAOCompra, models.RepositorioCompra; -DAOVeiculo: alterada consulta do método getPorPlaca para obter dados do modelo; adição do método getDatasUltimasTransacoes; -RepositorioVeiculo: adição de construtor padrão; adição do método getDatasUltimasTransacoes; -Veiculo: implementação do método isEmPosseDaLoja; -Adição das páginas compra.scala.html, inicio_compra.scala.html e mensagem.scala.html. -index.scala.html: adição do link para a compra de veículo; -routes: adição das URLs para operações de compra de veículo; -sql_script.txt: tipos da colunas data (tabelas compras e vendas) alterado para timestamp;

--- a/projetoRevendaVeiculosPlay/app/views/Crud/veiculos.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/Crud/veiculos.scala.html
@@ -54,8 +54,8 @@
     </h2>
     
     @form(routes.Veiculos.salvar()) {
-   		@inputText(inserirForm("anoFabricacao"), '_label -> "Ano")
-   		@inputText(inserirForm("placa"), '_label -> "Placa")
+   		@inputText(inserirForm("anoFabricacao"), '_label -> "Ano*")
+   		@inputText(inserirForm("placa"), '_label -> "Placa*")
    		@inputText(inserirForm("cilindradas"), '_label -> "Cilindradas")
    		@inputText(inserirForm("chassi"), '_label -> "Chassi")
    		Modelo
