--- a/projetoRevendaVeiculosPlay/app/views/index.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/index.scala.html
@@ -4,6 +4,6 @@
     
     <h1>Revenda de Veículos</h1>
     <a href="@{routes.Fabricantes.listar()}">CRUD Fabricantes</a><br>
-    <a href="@{routes.Veiculos.listar()}">CRUD Veiculos</a>
-    
+    <a href="@{routes.Veiculos.listar()}">CRUD Veiculos</a><br>
+    <a href="@{routes.Compras.iniciar()}">Comprar Veículo</a>
 }
