--- a/projetoRevendaVeiculosPlay/app/views/main.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/main.scala.html
@@ -1,15 +1,42 @@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
-
-<html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-    </head>
-    <body>
-        @content
-    </body>
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8">
+    <title>@title</title>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      body {
+        padding-top: 60px; 
+      }
+    </style>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
+  </head>
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="/">Revenda de Veículos</a>
+          <ul class="nav">
+            <li><a href="@{routes.Fabricantes.listar()}">Fabricantes</a></li>
+            <li><a href="#about" class="disabled">About</a></li>
+            <li><a href="#contact" class="disabled">Contact</a></li>
+            <li><a href="#login">Login</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+<!-- <div class="alert alert-success">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <strong>Warning!</strong> Best check yo self, you're not looking too good.
+</div> -->
+      @content
+    </div>        
+  </body>
 </html>
