--- a/projetoRevendaVeiculosPlay/app/views/Crud/veiculos.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/Crud/veiculos.scala.html
@@ -2,9 +2,9 @@
 
 @import helper._
 
-@main("Veículos") {
+@main("VeÃ­culos") {
     
-    <h1>Veículos Cadastrados</h1>
+    <h1>VeÃ­culos Cadastrados</h1>
     
     <table border="1">
     	<tr>
@@ -47,9 +47,9 @@
     
     <h2>
       @if(emEdicao == null){
-      	Novo Veículo
+      	Novo VeÃ­culo
       }else{
-        Editar Veículo
+        Editar VeÃ­culo
       }
     </h2>
     
