--- a/projetoRevendaVeiculosPlay/app/views/index.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/index.scala.html
@@ -1,9 +1,9 @@
 @(message: String)
 
-@main("Revenda de Veículos") {
+@main("Revenda de Veï¿½culos") {
     
-    <h1>Revenda de Veículos</h1>
+    <h1>Revenda de VeÃ­culos</h1>
     <a href="@{routes.Fabricantes.listar()}">CRUD Fabricantes</a><br>
-    <a href="@{routes.Veiculos.listar()}">CRUD Veiculos</a><br>
-    <a href="@{routes.Compras.iniciar()}">Comprar Veículo</a>
+    <a href="@{routes.Veiculos.listar()}">CRUD VeÃ­culos</a><br>
+    <a href="@{routes.Compras.iniciar()}">Comprar VeÃ­culo</a>
 }
