Removendo os arquivos de script do banco de dados. Dentro da pasta conf\evolutions\default tem o novo arquivo do script.

--- a/projetoRevendaVeiculosPlay/app/views/Crud/veiculos.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/Crud/veiculos.scala.html
@@ -3,18 +3,18 @@
 @import helper._
 @import helper.twitterBootstrap._
 
-@main("Veículos") {
-    
-    <h1>Veículos Cadastrados</h1>
-    
+@main("Veículos") { 
     <table class="table table-bordered table-condensed">
+    	<thead>
     	<tr>
-    		<td>Ano</td>
-    		<td>Placa</td>
-    		<td>Modelo</td>
-    		<td>Cilindradas</td>
-    		<td>Chassi</td>
+    		<th>Ano</th>
+    		<th>Placa</th>
+    		<th>Modelo</th>
+    		<th>Cilindradas</th>
+    		<th>Chassi</th>
     	</tr>
+<thead>
+<tbody>
         @for(v <- veiculos) {
         <tr>
             <td>@v.anoFabricacao</td>
@@ -23,22 +23,23 @@
             <td>@v.cilindradas</td>
             <td>@v.chassi</td>
       <td>
-		<a href="@routes.Veiculos.editar(v.id)" class="btn btn-mini">Editar</a>
-		<a href="@routes.Veiculos.remover(v.id)" class="btn btn-danger btn-mini">Remover</a>
+		<a href="@routes.Veiculos.editar(v.id)" class="btn btn-mini">
+		  <i class="icon-edit"></i> Editar
+		</a>
+		<a href="@routes.Veiculos.remover(v.id)" class="btn btn-danger btn-mini">
+		  <i class="icon-trash icon-white"></i> Remover
+		</a>
       </td>
         </tr>
         }
+        </tbody>
     </table>
-    
-    <h2>
-      @if(emEdicao == null){
-      	Novo Veículo
-      }else{
-        Editar Veículo
-      }
-    </h2>
-    
-    @form(routes.Veiculos.salvar()) {
+        
+    @form(routes.Veiculos.salvar(), '_class -> "form-horizontal") {
+    <fieldset>
+    <legend>
+      @if(emEdicao == null){Novo Veículo} else {Editar Veículo}
+    </legend>
    		@inputText(inserirForm("anoFabricacao"), '_label -> "Ano*")
    		@inputText(inserirForm("placa"), '_label -> "Placa*")
    		@inputText(inserirForm("cilindradas"), '_label -> "Cilindradas")
@@ -52,6 +53,7 @@
 	    <div class="actions">
           <input type="submit" class="btn primary" value="Salvar" />
         </div>
+ </fieldset>
     }
     
 }
