--- a/projetoRevendaVeiculosPlay/app/views/Crud/fabricantes.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/Crud/fabricantes.scala.html
@@ -1,22 +1,27 @@
 @(fabricantes: List[Fabricante], inserirForm: Form[Fabricante], emEdicao: Boolean)
 
-@import helper._
 @import helper.twitterBootstrap._
+@import helper._
+
 
 @main("Fabricantes") {
-  <h1>Fabricantes Cadastrados</h1>
   <table class="table table-bordered table-condensed">
   @for(f <- fabricantes.sortBy(_.descricao)) {
     <tr>
       <td>@f.descricao</td>
       <td>
-		<a href="@routes.Fabricantes.editar(f.id)" class="btn btn-mini">Editar</a>
-		<a href="@routes.Fabricantes.remover(f.id)" class="btn btn-danger btn-mini">Remover</a>
+		<a href="@routes.Fabricantes.editar(f.id)" class="btn btn-mini">
+		  <i class="icon-edit"></i> Editar
+		</a>
+		<a href="@routes.Fabricantes.remover(f.id)" class="btn btn-danger btn-mini">
+		  <i class="icon-trash icon-white"></i> Remover
+		</a>
       </td>
     </tr>
   }  
   </table>
-  @form(routes.Fabricantes.salvar()){
+<div class="container">
+  @form(routes.Fabricantes.salvar(), '_class -> "form-horizontal"){
     <fieldset> 
     <legend>
       @if(emEdicao) {Editar Fabricante} else {Novo Fabricante}
@@ -33,4 +38,5 @@
     </div>
     </fieldset>
   }
+  </div>
 }
