--- a/projetoRevendaVeiculosPlay/app/views/main.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/main.scala.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset="utf-8">
     <title>@title</title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")" />
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")" />
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")" />
     <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -33,11 +33,24 @@
       </div>
     </div>
    <div class="container">
-@* <div class="alert alert-success">
+ <div class="alert alert-success">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong>Warning!</strong> Best check yo self, you're not looking too good.
-</div> *@
-      @content
+  Best check yo self, you're not looking too good.
+</div> 
     </div>
+       <div class="container">
+
+            <div class="content"> 
+                
+                <div class="page-header">
+                    <h1>@title</h1>
+                </div>
+                <div class="row">
+                    <div class="span12">
+                        @content
+                    </div>
+                </div>
+            </div>
+        </div>
   </body>
 </html>
