--- a/projetoRevendaVeiculosPlay/app/views/main.scala.html
+++ b/projetoRevendaVeiculosPlay/app/views/main.scala.html
@@ -1,21 +1,18 @@
 @(title: String)(content: Html)
-
 <!DOCTYPE html>
-<html lang="pt-BR">
+
+<html>
   <head>
     <meta charset="utf-8">
     <title>@title</title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")" />
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")" />
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")" />
-    <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      body {
-        padding-top: 60px; 
-      }
-    </style>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.1.js")"></script>
+
+    <script src="@routes.Assets.at("javascripts/bootstrap.js")"></script>
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+<!--    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")"> -->
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -33,20 +30,31 @@
       </div>
     </div>
    <div class="container">
+   
  <div class="alert alert-success">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   Best check yo self, you're not looking too good.
 </div> 
+
     </div>
        <div class="container">
 
             <div class="content"> 
-                
+                <div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <strong>Warning!</strong> Best check yo self, you're not looking too good.
+</div>
                 <div class="page-header">
                     <h1>@title</h1>
                 </div>
                 <div class="row">
                     <div class="span12">
+<div class="alert">
+<button>
+<a href="#" class="close" data-dismiss="alert">&times;</a>
+  <strong>Warning!</strong> Best check yo self, you're not looking too good.
+</button>
+</div>
                         @content
                     </div>
                 </div>
