--- a/projetoRevendaVeiculosSpringMVC/.settings/org.eclipse.wst.common.component
+++ b/projetoRevendaVeiculosSpringMVC/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="RevendaVeiculosSpringMVC">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/testes"/>
         <property name="context-root" value="RevendaVeiculosSpringMVC"/>
         <property name="java-output-path" value="/RevendaVeiculosSpringMVC/build/classes"/>
     </wb-module>
